Add task user args